WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68050
Layout Test fast/css/transformed-mask.html, fast/reflections/reflection-masks.html are failing
https://bugs.webkit.org/show_bug.cgi?id=68050
Summary
Layout Test fast/css/transformed-mask.html, fast/reflections/reflection-masks...
Fumitoshi Ukai
Reported
2011-09-13 19:35:52 PDT
The following layout test are failing on chromium. fast/css/transformed-mask.html fast/reflections/reflection-masks.html fast/css/getComputedStyle/computed-style-with-zoom.html Probable cause:
http://trac.webkit.org/changeset/95058/
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=fast%2Fcss%2Ftransformed-mask.html%2Cfast%2Freflections%2Freflection-masks.html%2Cfast%2Fcss%2FgetComputedStyle%2Fcomputed-style-with-zoom.html&showExpectations=true
failed to apply reflection mask? in computed-style-with-zoom.html,actual results lost "fill" --- e:\b\build\slave\Webkit_Vista\build\layout-test-results\fast/css/getComputedStyle/computed-style-with-zoom-expected.txt +++ e:\b\build\slave\Webkit_Vista\build\layout-test-results\fast/css/getComputedStyle/computed-style-with-zoom-actual.txt @@ -5,7 +5,7 @@ PASS -webkit-border-horizontal-spacing, value: "20px" PASS -webkit-border-vertical-spacing, value: "20px" -PASS -webkit-box-reflect, value: "below 20px -webkit-gradient(linear, 0% 0%, 0% 100%, from(transparent), to(white)) 0 fill / auto / 0px stretch" +PASS -webkit-box-reflect, value: "below 20px -webkit-gradient(linear, 0% 0%, 0% 100%, from(transparent), to(white)) 0 / auto / 0px stretch" PASS -webkit-box-shadow, value: "rgb(255, 0, 0) 20px 20px 20px 20px" PASS -webkit-column-rule-width, value: "20px" PASS -webkit-perspective-origin, value: "20px 20px"
Attachments
Patch
(9.60 KB, patch)
2011-09-13 23:11 PDT
,
Dave Hyatt
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch
(10.64 KB, patch)
2011-09-14 09:23 PDT
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
Patch
(10.63 KB, patch)
2011-09-14 09:29 PDT
,
Dave Hyatt
aroben
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Fumitoshi Ukai
Comment 1
2011-09-13 20:32:08 PDT
compositing/reflections/masked-reflection-on-composited.html is also failing on GPU.
http://test-results.appspot.com/dashboards/flakiness_dashboard.html#group=%40ToT%20GPU%20Mesa%20-%20chromium.org&showExpectations=true&tests=compositing%2Freflections%2Fmasked-reflection-on-composited.html
Dave Hyatt
Comment 2
2011-09-13 22:44:52 PDT
Ok will look.
Dave Hyatt
Comment 3
2011-09-13 23:07:33 PDT
I know what caused this. Patch coming shortly.
Dave Hyatt
Comment 4
2011-09-13 23:11:38 PDT
Created
attachment 107290
[details]
Patch
WebKit Review Bot
Comment 5
2011-09-14 02:06:12 PDT
Comment on
attachment 107290
[details]
Patch
Attachment 107290
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/9659454
New failing tests: svg/css/getComputedStyle-basic.xhtml fast/css/getComputedStyle/computed-style.html fast/css/getComputedStyle/computed-style-without-renderer.html
Dave Hyatt
Comment 6
2011-09-14 09:23:36 PDT
Created
attachment 107340
[details]
Patch
Dave Hyatt
Comment 7
2011-09-14 09:29:12 PDT
Created
attachment 107341
[details]
Patch
Adam Roben (:aroben)
Comment 8
2011-09-14 09:30:51 PDT
Comment on
attachment 107341
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=107341&action=review
> Source/WebCore/css/CSSStyleSelector.cpp:3317 > NinePieceImage mask; > - mask.setImageSlices(LengthBox(0)); // For backwards compatibility, just make the mask box image slices 0 instead of 100%. > - mask.setBorderSlices(LengthBox()); // The slices default to auto. > + mask.setMaskDefaults();
Maybe it would be better to have a separate NinePieceImage constructor that did this for you?
Dave Hyatt
Comment 9
2011-09-14 09:44:33 PDT
Fixed in
r95096
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug